scrollbar width fixed
used :webkit-scrollbar
#yet to learn what is webkit

--- a/css/header/navbar/hamburger.css
+++ b/css/header/navbar/hamburger.css
@@ -3,8 +3,8 @@
     height: 50px;
     /* border: 2px solid red; */
     position:absolute;
-    top:4px;
-    left:96vw;
+    top:2px;
+    right:10px;
     display: flex;
     justify-content: center;
     align-items:center;
