--- a/css/header/navbar/main.css
+++ b/css/header/navbar/main.css
@@ -2,13 +2,14 @@
     position: absolute;
     top:0px;
     left:0px;
+    width:100vw;
 }
 .input_checkbox {
     width:50px;
     height:50px;
     position:fixed;
-    top:4px;
-    left:96vw;
+    top:2px;
+    right:10px;
     z-index:2;
     opacity: 0;
 }
